holkee 黑卡報表PDF框架 table 異動範圍

--- a/holkee/print/dashboard_print.html
+++ b/holkee/print/dashboard_print.html
@@ -317,6 +317,52 @@
         <div style="overflow: auto; width: 100%; margin: 15px 0; border-radius: 15px; border:1px solid #bbbbbb2c; box-shadow:3px 5px 5px rgba(0, 0, 0, 0.1); overflow: hidden;">
           <table border="0" cellspacing="0" cellpadding="0"
             style="width: 100%; font-size: 12px;color: #333333; text-align: center; font-family: Helvetica, '微軟正黑體',arial, sans-serif; line-height: 1.2; text-align: center;">
+            <thead style="background-color: #56A1EB;">
+              <tr style="color: #fff;">
+                <th style="padding: 5px; border-bottom: 1px solid rgba(0, 0, 0, 0.3);">廣告媒體</th>
+                <th style="padding: 5px; border-bottom: 1px solid rgba(0, 0, 0, 0.3);">廣告格式</th>
+                <th style="padding: 5px; border-bottom: 1px solid rgba(0, 0, 0, 0.3);">曝光數</th>
+                <th style="padding: 5px; border-bottom: 1px solid rgba(0, 0, 0, 0.3);">點擊數 / <br>觀看數</th>
+                <th style="padding: 5px; border-bottom: 1px solid rgba(0, 0, 0, 0.3);">點擊率 / <br>觀看率</th>
+                <th style="padding: 5px; border-bottom: 1px solid rgba(0, 0, 0, 0.3);">每次點擊成本 / <br>每次觀看成本</th>
+                <th style="padding: 5px; border-bottom: 1px solid rgba(0, 0, 0, 0.3);">廣告花費</th>
+                <th style="padding: 5px; border-bottom: 1px solid rgba(0, 0, 0, 0.3);">轉換數</th>
+                <th style="padding: 5px; border-bottom: 1px solid rgba(0, 0, 0, 0.3);">每次轉換成本</th>
+              </tr>
+            </thead>
+        
+            <tbody>
+              <tr style="color: #555;">
+                <td style="padding: 5px;">Facebook</td>
+                <td style="padding: 5px;">原生廣告</td>
+                <td style="padding: 5px;">25,060</td>
+                <td style="padding: 5px;">1,829</td>
+                <td style="padding: 5px;">7.30%</td>
+                <td style="padding: 5px;">$40.23</td>
+                <td style="padding: 5px;">$73,578.36</td>
+                <td style="padding: 5px;">0</td>
+                <td style="padding: 5px;">0</td>
+              </tr>
+            </tbody>
+            <tfoot style="background-color: #eaf7ff; color: #555;">
+              <tr style="font-weight: bold;">
+                <td colspan="2" style="padding: 5px; border-top: 1px solid #bbbbbb2c;">subtotal</td>
+                <td style="padding: 5px; border-top: 1px solid #bbbbbb2c;">25,060</td>
+                <td style="padding: 5px; border-top: 1px solid #bbbbbb2c;">1,829</td>
+                <td style="padding: 5px; border-top: 1px solid #bbbbbb2c;">7.30%</td>
+                <td style="padding: 5px; border-top: 1px solid #bbbbbb2c;">$40.23</td>
+                <td style="padding: 5px; border-top: 1px solid #bbbbbb2c;">$73,578.36</td>
+                <td style="padding: 5px; border-top: 1px solid #bbbbbb2c;">0</td>
+                <td style="padding: 5px; border-top: 1px solid #bbbbbb2c;">0</td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+
+        <div
+          style="overflow: auto; width: 100%; margin: 15px 0; border-radius: 15px; border:1px solid #bbbbbb2c; box-shadow:3px 5px 5px rgba(0, 0, 0, 0.1); overflow: hidden;">
+          <table border="0" cellspacing="0" cellpadding="0"
+            style="width: 100%; font-size: 12px;color: #333333; text-align: center; font-family: Helvetica, '微軟正黑體',arial, sans-serif; line-height: 1.2; text-align: center;">
             <thead style="background-color: #8b79dd;">
               <tr style="color: #fff;">
                 <th style="padding: 5px; border-bottom: 1px solid rgba(0, 0, 0, 0.3);">廣告媒體</th>
@@ -358,7 +404,7 @@
             </tfoot>
           </table>
         </div>
-
+        
         <div style="overflow: auto; width: 100%; margin: 15px 0; border-radius: 15px; border:1px solid #bbbbbb2c; box-shadow:3px 5px 5px rgba(0, 0, 0, 0.1); overflow: hidden;">
           <table border="0" cellspacing="0" cellpadding="0"
             style="width: 100%; font-size: 12px;color: #333333; text-align: center; font-family: Helvetica, '微軟正黑體',arial, sans-serif; line-height: 1.2; text-align: center;">
