更新圖片與相對路徑

--- a/iiot/TPUF-2023/html-collect/index.html
+++ b/iiot/TPUF-2023/html-collect/index.html
@@ -168,7 +168,7 @@
         <section class="footer-info">
             <div class="middle-container">
                 <div class="img">
-                    <img src="images/event_time.png" alt="活動流程">
+                    <img src="images/event_time_0901.png" alt="活動流程">
                 </div>
                 <div class="note">
                     <p>活動辦法、中獎名單及相關事宜，請依本次活動站公告為準，本單位保有修正、補充說明、暂停或終止活動之權利，如有任何變更將公布於活動網站,恕不另行通知；其他未盡事宜，悉依本單位相關規定或解釋辦理。</p>
