--- a/unicreate/herbal-jp.html
+++ b/unicreate/herbal-jp.html
@@ -626,12 +626,12 @@
 									</a>
 								</li>
 								<li>
-									<a target="_blank" href="https://www.instagram.com/unicreate8008/" class="icon brands style2 fa-instagram" title="有益帖 Instagram">
+									<a target="_blank" href="https://instagram.com/unicreate_jp/" class="icon brands style2 fa-instagram" title="有益帖 Instagram">
 										<span class="label">Instagram</span>
 									</a>
 								</li>
 								<li>
-									<a target="_blank" href="mailto:unicreate8008@gmail.com" class="icon style2 fa-envelope" title=" 有益帖 Email ">
+									<a target="_blank" href="mailto:unicreate.jp@gmail.com" class="icon style2 fa-envelope" title=" 有益帖 Email ">
 										<span class="label">Email</span>
 									</a>
 								</li>
