--- a/unicreate/herbal-jp.html
+++ b/unicreate/herbal-jp.html
@@ -616,16 +616,6 @@
 						<div class="inner">
 							<ul class="icons">
 								<li>
-									<a target="_blank" href="https://lin.ee/GgQ6vfo" class="icon brands style2 fa-line" title="加入 有益帖 Line">
-										<span class="label">Line</span>
-									</a>
-								</li>
-								<li>
-									<a target="_blank" href="https://www.facebook.com/unicreate8008" class="icon brands style2 fa-facebook-f" title="有益帖 Facebook">
-										<span class="label">Facebook</span>
-									</a>
-								</li>
-								<li>
 									<a target="_blank" href="https://instagram.com/unicreate_jp/" class="icon brands style2 fa-instagram" title="有益帖 Instagram">
 										<span class="label">Instagram</span>
 									</a>
@@ -636,9 +626,7 @@
 									</a>
 								</li>
 							</ul>
-							<p class="no_line">© <a target="_blank" href="https://unicreate.com.tw/">有益帖 unicreate</a>. All rights reserved.<br>
-							<!-- 南投縣埔里鎮中山路一段 208-1 號　電話：<a href="tel:+88649-2906697">049-2906697</a> -->
-						</p>
+							<p class="no_line">© <a target="_blank" href="https://unicreate.com.tw/">有益帖 unicreate</a>. All rights reserved.<br></p>
 							<ul class="footer-menu-link">
 								<li>
 									<a target="_blank" href="https://unicreate.com.tw/privacy-policy/" class="elementor-item">プライバシーポリシー</a>
