--- a/iiot/TPUF-2023/html-collect/index.html
+++ b/iiot/TPUF-2023/html-collect/index.html
@@ -53,15 +53,15 @@
                                 <img src="images/stamp_02.png" alt="自備環保容器">
                             </td>
                             <td>
-                                <img src="images/stamp_03_0831.png" alt="參加現場食農小學堂">
+                                <img src="images/stamp_03_0913.png" alt="參加任一食農小學堂">
                             </td>
                             <td>
-                                <img src="images/stamp_04_0831.png" alt="慢活場域單筆消費500枚">
+                                <img src="images/stamp_04_0913.png" alt="慢活場域（餐車 ）單筆消費500枚">
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <img src="images/stamp_09_0831.png" alt="慢遊場域單筆消費500枚">
+                                <img src="images/stamp_09_0913.png" alt="慢遊場域（主場）單筆消費500枚">
                             </td>
                             <td>
                                 
@@ -70,7 +70,7 @@
                                 
                             </td>
                             <td>
-                                <img src="images/stamp_06_0831.png" alt="慢時場域單筆消費500枚">
+                                <img src="images/stamp_06_0913.png" alt="慢時場域（台東故事館前）單筆消費500枚">
                             </td>
                         </tr>
                         <tr>
@@ -135,12 +135,12 @@
                     <div class="text-w">
                         <p>1000</p>
                     </div>
-                    <img src="images/serial_number_remaining.png" alt="市長消費回饋">
+                    <img src="images/serial_number_remaining_0913.png" alt="市長消費回饋">
                 </div>
             </div>
             <div class="middle-container">
                 <div class="img">
-                    <img src="images/serial_number_0831.png" alt="市長消費抽獎">
+                    <img src="images/serial_number_0913.png" alt="市長消費抽獎">
                 </div>
                 <ul class="nbsss">
                     <!-- 中獎變色 + ya -->
@@ -168,10 +168,10 @@
         <section class="footer-info">
             <div class="middle-container">
                 <div class="img">
-                    <img src="images/event_time_0901.png" alt="活動流程">
+                    <img src="images/event_time_0913.png" alt="活動流程">
                 </div>
                 <div class="note">
-                    <p>活動辦法、中獎名單及相關事宜，請依本次活動站公告為準，本單位保有修正、補充說明、暂停或終止活動之權利，如有任何變更將公布於活動網站,恕不另行通知；其他未盡事宜，悉依本單位相關規定或解釋辦理。</p>
+                    <p>活動辦法、中獎名單及相關事宜，請依本次活動站公告為準，本單位保有修正、補充說明、暫停或終止活動之權利，如有任何變更將公布於活動網站，恕不另行通知；其他未盡事宜，悉依本單位相關規定或解釋辦理。</p>
                 </div>
                 <div class="logos">
                     <img src="images/logos.png" alt="台東縣政府 LOGO 、 台東市公所 LOGO ">
