CRM - 條款編輯與顯示調整

--- a/CRM/terms.html
+++ b/CRM/terms.html
@@ -473,14 +473,111 @@
             <div class="fillin-box">
             <div class="terms-info">
                 <div class="terms-field">
-                    <p class="terms-title">第三方工具之服務</p>
-                    <p class="terms-description">使用第三方工具之服務時，請確保商家對其熟悉度，並同意其使用條款；holkee
-                        無法監視或控制由第三方產生之結果。為增加商家或消費者方便性，holkee 提供連結至第三方工具之服務；此服務提供不表示 holkee 認可第三方之服務內容，或與第三方有任何關係。holkee
-                        提供連結的外部網站，holkee 不保證其內容之合適性、即時性、有效性及正確性。商家或消費者連結至 holkee
-                        提供連結的網站時，應自行決定是否離開；若商家或消費者連結至第三方網站而產生之任何損害，holkee 不負任何損害賠償之連帶責任。<br><br>
-                        於使用第三方工具前，holkee 建議商家或消費者事先充分瞭解第三方工具之所有細節。<br>
-                        商家應符合第三方工具業者所定之資格，並經該業者驗證通過後，始得使用之。如因可歸責於商家之事由致商家無法使用該服務時，概與本平台無涉。
-                    </p>
+                    <p class="terms-title">質感廣告影片</p>
+                    <div class="terms-description">
+                        <!-- 貼入的 內容 會在這 -->
+                        <p class="title_underline">
+                            質感廣告影片
+                        </p>
+                        <ul class="ul_decimal">
+                            <li>
+                                <p>製作物基本規格說明</p>
+                                <ul class="ul_upper_alpha">
+                                    <li>
+                                        <p>交付規格</p>
+                                        <ul class="ul_lower_alpha">
+                                            <li>
+                                                <p>HD（1920 x 1080）/介於 23.97 至 30 fps/.mov 或 .mp4。</p>
+                                            </li>
+                                            <li>
+                                                <p>交付製作物數量及秒數以雙方委刊單為依據。</p>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <p>製作物專案內容<br>
+                                            本專案影片拍攝僅限腳本規劃、影片拍攝、影片剪輯（不包含動畫製作）。所有影片所需之道具、產品、演員等其他相關需求，皆由甲方提供。產品運輸之運費亦由甲方支付。如甲方有非專案規格製作需求，請提供範本予乙方影音負責單位確認是否可安排執行，若超出原專案影片製作規格，則需另外報價，並於雙方皆同意其製作之可行性後安排執行。
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p>製作時間<br>
+                                            乙方與乙方指定製作團隊應按製作準備會議提出雙方同意之進度表履行交片義務，除其中一方遭遇天災、人力不可抗拒之因素，或基於甲方要求變更而致無法遵守進度時，無論該變更是否經乙方同意，雙方得協調順延，另議交片日，且不得更行請求其他賠償。
+                                        </p>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <p>製作流程規範</p>
+                                <ul class="ul_upper_alpha">
+                                    <li>
+                                        <p>腳本製作<br>
+                                            由乙方影音負責單位與甲方討論腳本方向與影片風格定調，一旦雙方確認架構方向，即指派予乙方指定拍攝團隊製作文字分鏡腳本，提出第 1 版腳本後，提供 2
+                                            次免費修改，惟僅能依原架構不變之方向調整腳本內容或順序。若提出第 1 版腳本後，甲方欲完全更改劇情架構，則需另外加價 NT$5,000/次的腳本重置費用。</p>
+                                    </li>
+                                    <li>
+                                        <p>演員需求<br>
+                                            如腳本有演員需求，須由甲方提供或可選擇由拍攝團隊協尋演員。演員之報價及付款方式直接由甲方與拍攝團隊議價並直接完成付款作業。乙方不具處理演員相關事宜之責任。若甲方同意以乙方客製專案規格涵蓋演員之需求，可經由乙方評估後，另以個案提供特案報價單供甲方確認後安排。（註：付款作業之憑據須依照拍攝團隊協尋演員之合作模式提供：『三聯式發票』或『二聯式發票』亦或『演員勞務報酬單』其中之一為付款收據。）<br>
+                                            乙方及乙方指定拍攝團隊合作之演員報價基本為提供 1
+                                            年肖像權使用，如甲方提出肖像權年限延長或演員肖像權作為其他製作物素材等額外需求時則另行報價。詳細使用規範須以甲方與演員雙方合作簽署之『模特兒肖像權使用授權書』為最終之法律依據。</p>
+                                    </li>
+                                    <li>
+                                        <p>拍攝地點<br>
+                                            此專案規格為『單點拍攝』，意指僅在同一指定場所之定點拍攝完所有畫面。若腳本設計指定『棚拍』，即單一棚定點拍攝，且皆以專案內指定標準配合攝影棚為主;若腳本設定指定『外拍』，即單一定點場所外拍。若甲方有專案規格以外之拍攝地點需求，則自行提供場地或由乙方另行提供車馬費與棚費報價。免費外拍地點區域僅限台北地區及部分新北地區（蘆洲、三重、板橋、新莊、中永和、新店、土城、汐止、泰山），上述地點外，出機車馬費及 2 個地點以上拍攝則需另外報價。</p>
+                                    </li>
+                                    <li>
+                                        <p>拍攝時長<br>
+                                            此專案規格拍攝時數為開拍後 4 小時以內完成為準，腳本皆以 4 小時內可執行完畢為條件設計製作。若雙方討論之腳本有超時疑慮將提前告知甲方，並評估拍攝當天現場超時狀況及預估超時時數做為參考依據。最終超時費用以拍攝當天實際超時時數計算，額外超時報價（僅拍攝工作團隊，不含演員）以
+                                            NT$3,000/hr 為單位。</p>
+                                    </li>
+                                    <li>
+                                        <p>側拍需求<br>
+                                            影片拍攝當天，甲方如需側拍畫面，需由甲方自行到場進行側拍，乙方及當日乙方拍攝團隊皆不提供側拍服務（註：甲方到場側拍以『不可影響當日影片拍攝之進度』為前提進行，若側拍會影響當日拍攝進度，當日乙方拍攝團隊有權利取消甲方之側拍需求）。
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p>額外收費<br>
+                                            若因甲方拍攝需求而產生任何不在原專案規格內之額外費用，由乙方或乙方拍攝團隊另行收費。</p>
+                                    </li>
+                                    <li>
+                                        <p>影片剪輯<br>
+                                            此專案規格提供 2 次免費修改，惟僅能以雙方合意之腳本規劃或拍攝當天，由當日乙方拍攝團隊與甲方協議修改內容之方向進行微調整，且僅能以既有影片畫面剪接修改，恕不提供畫面補拍。若甲方有超過 2
+                                            次額外修改需求，由乙方影音負責單位評估修改內容之執行可行性。雙方合意修改後，以額外修改報價 NT$3,000/次為基本單位。</p>
+                                    </li>
+                                    <li>
+                                        <p>專案需簽立文件<br>
+                                            甲方須分別於乙方提出腳本階段及現場拍攝完成當日簽署腳本確認書、現場殺青確認書，作為甲方階段性驗收製作物同意之依據。</p>
+                                    </li>
+                                    <li>
+                                        <p>權利歸屬<br>
+                                            於結案時，乙方應將交付影片工作成果檔案給甲方，甲方於取得專案影片後擁有永久之使用權，惟前述使用權非經乙方事前同意，甲方不得與其他影片合成剪輯、或另行截圖作為平面素材使用的情形，除有違反前述情況發生外，乙方與乙方製片商不以著作人格權對抗之。本專案影片之委刊與乙方授權甲方使用之播送範圍不包含無線、有線或衛星電視頻道上播送。
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p>結案流程<br>
+                                            拍攝完成僅提供剪輯完畢之影片檔結案，不另提供可編輯檔及毛片。</p>
+                                    </li>
+                                    <li>
+                                        <p>專案取消執行</p>
+                                        <ul class="ul_lower_alpha">
+                                            <li>
+                                                <p>腳本溝通階段取消：收到甲方之專案影片拍攝需求後，由乙方影音負責單位主動聯繫甲方溝通腳本架構方向，於此時期即進入正式專案執行流程並衍生腳本溝通費用。若中途停止影片執行，將扣除專案影片總額費用之 1/3 為腳本溝通成本，剩下費用可移轉為乙方所提供之服務項目花費（包括但不限於數位廣告媒體等），不另做退款。</p>
+                                            </li>
+                                            <li>
+                                                <p>拍攝前置階段取消：若甲方於腳本確認完畢，拍攝前置作業階段中途停止影片執行，將扣除專案影片總額費用之2/3為前期腳本溝通及人力執行成本，剩下費用可移轉為乙方所提供之服務項目花費（包括但不限於數位廣告媒體等），不另做退款。</p>
+                                            </li>
+                                            <li>
+                                                <p>拍攝階段取消：若甲方於影片拍攝當日取消或拍攝完成後取消，將扣除專案影片總額費用全額做為影片製作費用，不另做退款。</p>
+                                            </li>
+                                            <li>
+                                                <p>專案遲延：如因可歸責於甲方之原因致本專案遲延交付素材或長達六個月以上無法進入拍攝，甲方理解乙方有權更新最新報價與乙方要求甲方補齊差額後始得執行，甲方若不願意支付差額時，得選擇依照上述取消階段之各階段標準完成扣款後，同意剩下費用則可移轉為乙方所提供之服務項目花費（包括但不限於數位廣告媒體等），不另要求乙方做退款。</p>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <!-- 內容 結束 -->
+                    </div>
                 </div>
             </div>    
                 <form>
@@ -669,7 +766,7 @@
     <section id="popup-edit-terms" class="white-popup mfp-hide">
         <div class="popup-container">
             <div class="top-title">
-                <h4><span>編輯條款</span></h4>
+                <h4><span>修改條款</span></h4>
             </div>
             <div class="fillin-box">
                 <form>
@@ -677,16 +774,123 @@
                         <div class="fillin-info width-100">
                             <fieldset class="clearfix">
                                 <input class="default" type="" name="" placeholder="新增文字捷徑，捷徑必須至少包含 3 個字元。"
-                                    value="第三方工具之服務">
+                                    value="質感廣告影片">
+                                    <!-- 第三方工具之服務 -->
                             </fieldset>
                             <fieldset>
-                                <textarea placeholder="請輸入條款內容">
+                                <!-- <textarea placeholder="請輸入條款內容">
 使用第三方工具之服務時，請確保商家對其熟悉度，並同意其使用條款；holkee 無法監視或控制由第三方產生之結果。
 為增加商家或消費者方便性，holkee 提供連結至第三方工具之服務；此服務提供不表示 holkee 認可第三方之服務內容，或與第三方有任何關係。
 holkee 提供連結的外部網站，holkee 不保證其內容之合適性、即時性、有效性及正確性。
 商家或消費者連結至 holkee 提供連結的網站時，應自行決定是否離開；若商家或消費者連結至第三方網站而產生之任何損害，holkee 不負任何損害賠償之連帶責任。
 於使用第三方工具前，holkee 建議商家或消費者事先充分瞭解第三方工具之所有細節。
-商家應符合第三方工具業者所定之資格，並經該業者驗證通過後，始得使用之。如因可歸責於商家之事由致商家無法使用該服務時，概與本平台無涉。
+商家應符合第三方工具業者所定之資格，並經該業者驗證通過後，始得使用之。如因可歸責於商家之事由致商家無法使用該服務時，概與本平台無涉。            
+                                </textarea> -->
+                                <textarea placeholder="請輸入條款內容"><p class="title_underline">
+    質感廣告影片
+</p>
+<ul class="ul_decimal">
+    <li>
+        <p>製作物基本規格說明</p>
+        <ul class="ul_upper_alpha">
+            <li>
+                <p>交付規格</p>
+                <ul class="ul_lower_alpha">
+                    <li>
+                        <p>HD（1920 x 1080）/介於 23.97 至 30 fps/.mov 或 .mp4。</p>
+                    </li>
+                    <li>
+                        <p>交付製作物數量及秒數以雙方委刊單為依據。</p>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <p>製作物專案內容<br>
+                    本專案影片拍攝僅限腳本規劃、影片拍攝、影片剪輯（不包含動畫製作）。所有影片所需之道具、產品、演員等其他相關需求，皆由甲方提供。產品運輸之運費亦由甲方支付。如甲方有非專案規格製作需求，請提供範本予乙方影音負責單位確認是否可安排執行，若超出原專案影片製作規格，則需另外報價，並於雙方皆同意其製作之可行性後安排執行。
+                </p>
+            </li>
+            <li>
+                <p>製作時間<br>
+                    乙方與乙方指定製作團隊應按製作準備會議提出雙方同意之進度表履行交片義務，除其中一方遭遇天災、人力不可抗拒之因素，或基於甲方要求變更而致無法遵守進度時，無論該變更是否經乙方同意，雙方得協調順延，另議交片日，且不得更行請求其他賠償。
+                </p>
+            </li>
+        </ul>
+    </li>
+    <li>
+        <p>製作流程規範</p>
+        <ul class="ul_upper_alpha">
+            <li>
+                <p>腳本製作<br>
+                    由乙方影音負責單位與甲方討論腳本方向與影片風格定調，一旦雙方確認架構方向，即指派予乙方指定拍攝團隊製作文字分鏡腳本，提出第 1 版腳本後，提供 2
+                    次免費修改，惟僅能依原架構不變之方向調整腳本內容或順序。若提出第 1 版腳本後，甲方欲完全更改劇情架構，則需另外加價 NT$5,000/次的腳本重置費用。</p>
+            </li>
+            <li>
+                <p>演員需求<br>
+                    如腳本有演員需求，須由甲方提供或可選擇由拍攝團隊協尋演員。演員之報價及付款方式直接由甲方與拍攝團隊議價並直接完成付款作業。乙方不具處理演員相關事宜之責任。若甲方同意以乙方客製專案規格涵蓋演員之需求，可經由乙方評估後，另以個案提供特案報價單供甲方確認後安排。（註：付款作業之憑據須依照拍攝團隊協尋演員之合作模式提供：『三聯式發票』或『二聯式發票』亦或『演員勞務報酬單』其中之一為付款收據。）<br>
+                    乙方及乙方指定拍攝團隊合作之演員報價基本為提供 1
+                    年肖像權使用，如甲方提出肖像權年限延長或演員肖像權作為其他製作物素材等額外需求時則另行報價。詳細使用規範須以甲方與演員雙方合作簽署之『模特兒肖像權使用授權書』為最終之法律依據。</p>
+            </li>
+            <li>
+                <p>拍攝地點<br>
+                    此專案規格為『單點拍攝』，意指僅在同一指定場所之定點拍攝完所有畫面。若腳本設計指定『棚拍』，即單一棚定點拍攝，且皆以專案內指定標準配合攝影棚為主;若腳本設定指定『外拍』，即單一定點場所外拍。若甲方有專案規格以外之拍攝地點需求，則自行提供場地或由乙方另行提供車馬費與棚費報價。免費外拍地點區域僅限台北地區及部分新北地區（蘆洲、三重、板橋、新莊、中永和、新店、土城、汐止、泰山），上述地點外，出機車馬費及
+                    2 個地點以上拍攝則需另外報價。</p>
+            </li>
+            <li>
+                <p>拍攝時長<br>
+                    此專案規格拍攝時數為開拍後 4 小時以內完成為準，腳本皆以 4
+                    小時內可執行完畢為條件設計製作。若雙方討論之腳本有超時疑慮將提前告知甲方，並評估拍攝當天現場超時狀況及預估超時時數做為參考依據。最終超時費用以拍攝當天實際超時時數計算，額外超時報價（僅拍攝工作團隊，不含演員）以
+                    NT$3,000/hr 為單位。</p>
+            </li>
+            <li>
+                <p>側拍需求<br>
+                    影片拍攝當天，甲方如需側拍畫面，需由甲方自行到場進行側拍，乙方及當日乙方拍攝團隊皆不提供側拍服務（註：甲方到場側拍以『不可影響當日影片拍攝之進度』為前提進行，若側拍會影響當日拍攝進度，當日乙方拍攝團隊有權利取消甲方之側拍需求）。
+                </p>
+            </li>
+            <li>
+                <p>額外收費<br>
+                    若因甲方拍攝需求而產生任何不在原專案規格內之額外費用，由乙方或乙方拍攝團隊另行收費。</p>
+            </li>
+            <li>
+                <p>影片剪輯<br>
+                    此專案規格提供 2 次免費修改，惟僅能以雙方合意之腳本規劃或拍攝當天，由當日乙方拍攝團隊與甲方協議修改內容之方向進行微調整，且僅能以既有影片畫面剪接修改，恕不提供畫面補拍。若甲方有超過 2
+                    次額外修改需求，由乙方影音負責單位評估修改內容之執行可行性。雙方合意修改後，以額外修改報價 NT$3,000/次為基本單位。</p>
+            </li>
+            <li>
+                <p>專案需簽立文件<br>
+                    甲方須分別於乙方提出腳本階段及現場拍攝完成當日簽署腳本確認書、現場殺青確認書，作為甲方階段性驗收製作物同意之依據。</p>
+            </li>
+            <li>
+                <p>權利歸屬<br>
+                    於結案時，乙方應將交付影片工作成果檔案給甲方，甲方於取得專案影片後擁有永久之使用權，惟前述使用權非經乙方事前同意，甲方不得與其他影片合成剪輯、或另行截圖作為平面素材使用的情形，除有違反前述情況發生外，乙方與乙方製片商不以著作人格權對抗之。本專案影片之委刊與乙方授權甲方使用之播送範圍不包含無線、有線或衛星電視頻道上播送。
+                </p>
+            </li>
+            <li>
+                <p>結案流程<br>
+                    拍攝完成僅提供剪輯完畢之影片檔結案，不另提供可編輯檔及毛片。</p>
+            </li>
+            <li>
+                <p>專案取消執行</p>
+                <ul class="ul_lower_alpha">
+                    <li>
+                        <p>腳本溝通階段取消：收到甲方之專案影片拍攝需求後，由乙方影音負責單位主動聯繫甲方溝通腳本架構方向，於此時期即進入正式專案執行流程並衍生腳本溝通費用。若中途停止影片執行，將扣除專案影片總額費用之
+                            1/3 為腳本溝通成本，剩下費用可移轉為乙方所提供之服務項目花費（包括但不限於數位廣告媒體等），不另做退款。</p>
+                    </li>
+                    <li>
+                        <p>拍攝前置階段取消：若甲方於腳本確認完畢，拍攝前置作業階段中途停止影片執行，將扣除專案影片總額費用之2/3為前期腳本溝通及人力執行成本，剩下費用可移轉為乙方所提供之服務項目花費（包括但不限於數位廣告媒體等），不另做退款。
+                        </p>
+                    </li>
+                    <li>
+                        <p>拍攝階段取消：若甲方於影片拍攝當日取消或拍攝完成後取消，將扣除專案影片總額費用全額做為影片製作費用，不另做退款。</p>
+                    </li>
+                    <li>
+                        <p>專案遲延：如因可歸責於甲方之原因致本專案遲延交付素材或長達六個月以上無法進入拍攝，甲方理解乙方有權更新最新報價與乙方要求甲方補齊差額後始得執行，甲方若不願意支付差額時，得選擇依照上述取消階段之各階段標準完成扣款後，同意剩下費用則可移轉為乙方所提供之服務項目花費（包括但不限於數位廣告媒體等），不另要求乙方做退款。
+                        </p>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </li>
+</ul>
                                 </textarea>
                             </fieldset>
                         </div>
