市集消費抽獎序號 - 修改調整破版問題

--- a/iiot/TPUF-2023/html-collect/index.html
+++ b/iiot/TPUF-2023/html-collect/index.html
@@ -140,12 +140,37 @@
             </div>
             <div class="middle-container">
                 <div class="img">
-                    <img src="images/serial_number_0913.png" alt="市長消費抽獎">
+                    <img src="images/serial_number_0926a.png" alt="市長消費抽獎">
+                </div>
+            </div>
+        </section>
+        <section class="bg_color_blue">
+            <div class="middle-container">
+                <div class="img">
+                    <img src="images/serial_number_0926b.png" alt="市集消費抽獎序號">
                 </div>
                 <ul class="nbsss">
                     <!-- 中獎變色 + ya -->
                     <li class="ya">
                         <p>184883</p>
+                    </li>
+                    <li>
+                        <p>111111</p>
+                    </li>
+                    <li>
+                        <p>548756</p>
+                    </li>
+                    <li>
+                        <p>235874</p>
+                    </li>
+                    <li>
+                        <p>111111</p>
+                    </li>
+                    <li>
+                        <p>548756</p>
+                    </li>
+                    <li>
+                        <p>235874</p>
                     </li>
                     <li>
                         <p>111111</p>
