--- a/CTBC-0716/index - 複製.html
+++ b/CTBC-0716/index - 複製.html
@@ -24,17 +24,17 @@
 	            		<ul class="pay_list">
 	            			<li>
 	            				<a href="#">
-	            					<p class="">信用卡付款<br><span>（一般付款）</span></p>
+	            					<p class="banks">信用卡付款<br><span>（一般付款）</span></p>
 	            				</a>
 	            			</li>
 	            			<li>
 	            				<a class="choose_pay" href="#">
-	            					<p class="">信用卡付款<br><span>（分期付款）</span></p>
+	            					<p class="banks">信用卡付款<br><span>（分期付款）</span></p>
 	            				</a>
 	            			</li>
 	            			<li>
 	            				<a href="#">
-	            					<p class="">信用卡付款<br><span>（紅利折抵付款）</span></p>
+	            					<p class="banks">信用卡付款<br><span>（紅利折抵付款）</span></p>
 	            				</a>
 	            			</li>
 	            			<li>
@@ -49,26 +49,17 @@
 	            			</li>
 	            			<li>
 	            				<a href="#">
-	            					<p class="">快速付<br>
-										<span>（一般付款）</span><br>
-										<span class="ss">（本次交易完成即記住卡號，下次交易將使用同卡片付款）</span>
-									</p>
+	            					<p class="CTBC">快速付<br><span>（一般付款）</span></p>
 	            				</a>
 	            			</li>
 	            			<li>
 	            				<a href="#">
-	            					<p class="">快速付<br>
-										<span>（分期付款）</span>
-										<span class="ss">（本次交易完成即記住卡號，下次交易將使用同卡片付款）</span>
-									</p>
+	            					<p class="CTBC">快速付<br><span>（分期付款）</span></p>
 	            				</a>
 	            			</li>
 	            			<li>
 	            				<a href="#">
-	            					<p class="">快速付<br>
-										<span>（紅利折抵付款）</span>
-										<span class="ss">（本次交易完成即記住卡號，下次交易將使用同卡片付款）</span>
-									</p>
+	            					<p class="CTBC">快速付<br><span>（紅利折抵付款）</span></p>
 	            				</a>
 	            			</li>
 	            			<li>
@@ -98,7 +89,7 @@
 	            	</div>
             </section>
             <p class="copyright">
-            	<span>建議瀏覽版本：Edge 或 Chrome 50 或 FireFox52以上</span>
+            	<span>建議瀏覽版本：IE11 或 Chrome 50 或 FireFox52以上</span>
             	<span>© 中國信託 版權所有</span>
             	<span>24小時商店服務專線：0800-211-211</span></span>
             </p>
