SFAP - 補上 XX icon 與  CSS

--- a/SFAP/SFAP-html/SFAP.html
+++ b/SFAP/SFAP-html/SFAP.html
@@ -398,6 +398,7 @@
                                 <td>
                                     <span class="glyphicon glyphicon-eye" title="查詢明細"></span>
                                     <span class="glyphicon glyphicon-pencil" title="編輯"></span>
+                                    <span class="glyphicon glyphicon-crosses" title="編輯"></span>
                                 </td>
                                 <td>A0543-20230617-15-005</td>
                                 <td>X200***261</td>
@@ -413,6 +414,7 @@
                                 <td>
                                     <span class="glyphicon glyphicon-eye" title="查詢明細"></span>
                                     <span class="glyphicon glyphicon-pencil" title="編輯"></span>
+                                    <span class="glyphicon glyphicon-crosses" title="編輯"></span>
                                 </td>
                                 <td>A0543-20230617-15-005</td>
                                 <td>X200***261</td>
@@ -428,6 +430,7 @@
                                 <td>
                                     <span class="glyphicon glyphicon-eye" title="查詢明細"></span>
                                     <span class="glyphicon glyphicon-pencil" title="編輯"></span>
+                                    <span class="glyphicon glyphicon-crosses" title="編輯"></span>
                                 </td>
                                 <td>A0543-20230617-15-005</td>
                                 <td>X200***261</td>
@@ -443,6 +446,7 @@
                                 <td>
                                     <span class="glyphicon glyphicon-eye" title="查詢明細"></span>
                                     <span class="glyphicon glyphicon-pencil" title="編輯"></span>
+                                    <span class="glyphicon glyphicon-crosses" title="編輯"></span>
                                 </td>
                                 <td>A0543-20230617-15-005</td>
                                 <td>C220***370</td>
@@ -458,6 +462,7 @@
                                 <td>
                                     <span class="glyphicon glyphicon-eye" title="查詢明細"></span>
                                     <span class="glyphicon glyphicon-pencil" title="編輯"></span>
+                                    <span class="glyphicon glyphicon-crosses" title="編輯"></span>
                                 </td>
                                 <td>A0543-20230617-15-005</td>
                                 <td>X200***261</td>
