CTBE-更新：移除icon + 上文字

--- a/CTBC-0716/index.html
+++ b/CTBC-0716/index.html
@@ -51,7 +51,7 @@
 	            				<a href="#">
 	            					<p class="">快速付<br>
 										<span>（一般付款）</span><br>
-										<span class="ss">（本次交易完成即記住卡號，下次交易將使用同卡片付款）</span>
+										<span class="ss">（本次交易完成即記住此卡號，下次交易將使用同卡號付款）</span>
 									</p>
 	            				</a>
 	            			</li>
@@ -59,7 +59,7 @@
 	            				<a href="#">
 	            					<p class="">快速付<br>
 										<span>（分期付款）</span>
-										<span class="ss">（本次交易完成即記住卡號，下次交易將使用同卡片付款）</span>
+										<span class="ss">（本次交易完成即記住此卡號，下次交易將使用同卡號付款）</span>
 									</p>
 	            				</a>
 	            			</li>
@@ -67,7 +67,7 @@
 	            				<a href="#">
 	            					<p class="">快速付<br>
 										<span>（紅利折抵付款）</span>
-										<span class="ss">（本次交易完成即記住卡號，下次交易將使用同卡片付款）</span>
+										<span class="ss">（本次交易完成即記住此卡號，下次交易將使用同卡號付款）</span>
 									</p>
 	            				</a>
 	            			</li>
