walk - add pages ul

--- a/iiot/TTPush-walk/index.html
+++ b/iiot/TTPush-walk/index.html
@@ -134,6 +134,94 @@
                     </li>
                 </ul>
             </div>
+            <div class="pages">
+                <ul>
+                    <!-- 看是不出現或是出現了不能點  -->
+                    <li>
+                        <a class="prev disabled">Prev</a>
+                    </li>
+                    <li>
+                        <a class="selected">1</a>
+                    </li>
+                    <li>
+                        <a>2</a>
+                    </li>
+                    <li>
+                        <a>3</a>
+                    </li>
+                    <li>
+                        <a>4</a>
+                    </li>
+                    <li>
+                        <a>5</a>
+                    </li>
+                    <li>
+                        <a class="next">next</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="pages">
+                <ul>
+                    <li>
+                        <a class="prev">Prev</a>
+                    </li>
+                    <li>
+                        <a>1</a>
+                    </li>
+                    <li>
+                        <a>2</a>
+                    </li>
+                    <li>
+                        <a class="selected">3</a>
+                    </li>
+                    <li>
+                        <a>4</a>
+                    </li>
+                    <li>
+                        <a>5</a>
+                    </li>
+                    <li>
+                        <a class="next">next</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="pages">
+                <ul>
+                    <li>
+                        <a class="prev ">Prev</a>
+                    </li>
+                    <li>
+                        <a>1</a>
+                    </li>
+                    <li>
+                        <a>...</a>
+                    </li>
+                    <li>
+                        <a>6</a>
+                    </li>
+                    <li>
+                        <a class="selected">7</a>
+                    </li>
+                    <li>
+                        <a>8</a>
+                    </li>
+                    <li>
+                        <a>...</a>
+                    </li>
+                    <li>
+                        <a>5</a>
+                    </li>
+                    <li>
+                        <a class="next">next</a>
+                    </li>
+                </ul>
+                <div class="search-page">
+                    <!-- 前後都可以放字 -->
+                    <p>text</p> 
+                    <input type="text" value="5">
+                    <p>1 of 50 pages</p>
+                </div>
+            </div>
         </section>
     </main>
 </body>
