CTBC - 更改圖片手機板尺寸

--- a/CTBC-0716/index.html
+++ b/CTBC-0716/index.html
@@ -78,7 +78,7 @@
 	            			</li>
 	            			<li>
 	            				<a href="#">
-	            					<img class="american_express" src="images/american_express_logo.svg">
+	            					<img class="m_width" src="images/american_express_logo.svg">
 	            				</a>
 	            			</li>
 	            			<li>
@@ -88,9 +88,14 @@
 	            			</li>
 	            			<li>
 	            				<a href="#">
-	            					<img src="images/LINE_Pay_logo.svg">
+	            					<img class="m_width" src="images/LINE_Pay_logo.svg">
 	            				</a>
 	            			</li>
+							<li>
+								<a href="#">
+									<img class="m_width" src="images/FULAPAY_logo.png">
+								</a>
+							</li>
 	            		</ul>
 	            		<div class="the_btn">
 		            		<button class="btn_style">付款</button>
