SFAP - 新增陪訪記錄內容
1、陪訪紀錄(簡易)
2、CB-陪訪記錄內容-陪訪記錄(HNW)-尚未設定相關題目
3、CB-陪訪記錄內容- 陪訪記錄(HNW)-有設定題目

--- a/SFAP/SFAP-html/SFAP.html
+++ b/SFAP/SFAP-html/SFAP.html
@@ -398,7 +398,7 @@
                                 <td>
                                     <span class="glyphicon glyphicon-eye" title="查詢明細"></span>
                                     <span class="glyphicon glyphicon-pencil" title="編輯"></span>
-                                    <span class="glyphicon glyphicon-crosses" title="編輯"></span>
+                                    <span class="glyphicon glyphicon-crosses" title="刪除"></span>
                                 </td>
                                 <td>A0543-20230617-15-005</td>
                                 <td>X200***261</td>
@@ -414,7 +414,7 @@
                                 <td>
                                     <span class="glyphicon glyphicon-eye" title="查詢明細"></span>
                                     <span class="glyphicon glyphicon-pencil" title="編輯"></span>
-                                    <span class="glyphicon glyphicon-crosses" title="編輯"></span>
+                                    <span class="glyphicon glyphicon-crosses" title="刪除"></span>
                                 </td>
                                 <td>A0543-20230617-15-005</td>
                                 <td>X200***261</td>
